# vessel

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: tags.yaml
vessel/: Dockerfile  __init__.py  cli.py  manager.py  models.py  server.py  watch_handlers.py  web.py
vessel/tools/: kubescore.py  kubesec.py  linter.py  trivy.py
